src/test/deca/syntax/invalid/include_cycle_1.deca
#include "src/test/deca/syntax/invalid/include_cycle_2.deca"